--- a/app/src/main/res/layout/device_holder.xml
+++ b/app/src/main/res/layout/device_holder.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="24dp">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -11,12 +11,25 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/holder_device_mac"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/holder_device_name" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/holder_device_waste"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/holder_device_mac" />
+
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/holder_annoying_device"
+        android:id="@+id/holder_device_star"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:background="@drawable/ic_baseline_star_border_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/holder_device_name" />
+        app:layout_constraintTop_toBottomOf="@id/holder_device_mac" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
